--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ set_property(TARGET vigor PROPERTY CXX_STANDARD 20)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(freetype CONFIG REQUIRED)
+find_path(PLOG_INCLUDE_DIRS "plog/Appenders/AndroidAppender.h")
 
 target_link_libraries(vigor PUBLIC glfw)
 target_link_libraries(vigor PUBLIC freetype)
+target_include_directories(vigor PRIVATE ${PLOG_INCLUDE_DIRS})
